<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhantPower</string>
    <string name="hello_world">Hello world!</string>
    <string name="scan">Scan</string>
    <string name="pose_fist">Fist</string>
    <string name="pose_wavein">Wave In</string>
    <string name="pose_waveout">Wave Out</string>
    <string name="pose_fingersspread">Fingers Spread</string>
    <string name="pose_rest">Rest</string>
    <string name="arm_left">Left Arm</string>
    <string name="arm_right">Right Arm</string>
    <string name="unlocked">Unlocked</string>
    <string name="locked">Locked</string>
    <string name="myo_message">Please connect Myo</string>
    <string name="toggleSwitch">On/Off</string>
    <string name="restButton">Send Rest Toggle</string>
    <string name="MyoStatus">Myo Status</string>
    <string name="refresh">Refresh</string>

</resources>
